welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:8: error: not found: value levebrosse
  levebrosse()
  ^